--- a/excercise_solution.yml
+++ b/excercise_solution.yml
@@ -18,4 +18,4 @@ stages:
       continueOnError: true
       inputs:
         script: 'newman run StarterAPIs.json'
-        workingDirectory: '...'
+        workingDirectory: '/automated_testing/'
