--- a/excercise_solution.yml
+++ b/excercise_solution.yml
@@ -9,7 +9,7 @@ stages:
       name: Hosted Ubuntu 1604
     steps:
     - task: CmdLine@2
-      displayName: Install Newman
+      displayName: Install newman
       inputs:
         script: 'sudo npm install -g newman'
         workingDirectory: $(System.DefaultWorkingDirectory)
